<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/share" android:title="@string/share"
        android:icon="@drawable/actionbar_fm_share" android:showAsAction="always" />

    <item android:id="@+id/copy" android:title="@string/copy"
        android:icon="@drawable/actionbar_fm_copy" android:showAsAction="always" />

    <item android:id="@+id/delete" android:title="@string/delete"
        android:icon="@drawable/actionbar_fm_delete" android:showAsAction="always" />

    <item android:id="@+id/cut" android:title="@string/cut" android:icon="@drawable/actionbar_fm_cut"
        android:showAsAction="always" />

    <item android:id="@+id/popup_menu_more" android:title="@string/more"
        android:icon="@drawable/actionbar_fm_more" android:showAsAction="always" />
</menu>